# global-market-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/: anomaly_detection.py  cleaning.py  evaluation.py  feature_engineering.py  forecasting.py  ingestion.py  outlier_detection.py  pipeline.py
tests/: test_cleaning.py  test_feature_engineering.py
